Remove mobile whitespace on the right. Bug found from Contact contents.

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,6 +2,12 @@
     transition: all 0.3s ease;
 }
 
+.dont-pad-me {
+    width: 100vw;
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
 .transparent {
     background: transparent !important;
 }
